[package]
name = "minesweeper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rand = "0.8.5"
rust-ini = "0.18.0"
winit = "0.27.5"
glutin = "0.30.0"
gl = "0.14.0"
raw-window-handle = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.25.0"